flex/02-flex-header/style.css
.header  {
  font-family: monospace;
  background: papayawhip;
  display: flex;
  justify-content:space-between;
  padding: 8px;
}

.logo {
  font-size: 48px;
  font-weight: 900;
  color: tomato;
  background: white;
  padding: 4px 32px;
}

ul {
  /* this removes the dots on the list items*/
  list-style-type: none;
  display: flex;
  margin: 0;
  padding: 0;
  justify-content: space-between;

}

a {
  font-size: 22px;
  background: white;
  /* this removes the line under the links */
  text-decoration: none;
}

